the issue with DynamicGrid and other buttons not being visible has been solved

--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -2,23 +2,20 @@
 	display: flex;
 	justify-content: center;
 	gap: 20px;
-	/* width: 80vw; */
 	max-width: 1000px;
 	background-color: rgb(0, 0, 0);
-	/* background-color: #547864; */
-	color: white;
 	padding: 10px 25px;
 	position: fixed;
 	top: 10px;
-	z-index: 3;
+	z-index: 8;
 }
 
 @media (max-width: 1000px) {
-	.headerWrapper {
+	.headerwrapper {
 		padding: 5px;
 	}
 }
-.Open {
+.open {
 	min-width: fit-content;
 }
 
@@ -32,7 +29,7 @@
 	z-index: 4;
 }
 
-.motionWrapper {
+.motionwrapper {
 	position: relative;
 	display: flex;
 	justify-content: space-between;
