--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -17,6 +17,7 @@
 	justify-content: center;
 	align-items: center;
 	animation: fadeIn 0.2s ease-out forwards;
+	z-index: 1;
 }
 
 .backdrop {
@@ -24,7 +25,7 @@
 	left: 0;
 	width: 100vw;
 	height: 100vh;
-	z-index: 1;
+	z-index: 2;
 	background-color: hsl(0, 0%, 0%, 80%);
 	display: flex;
 	justify-content: center;
