--- a/src/components/PictureFrame/styles.module.css
+++ b/src/components/PictureFrame/styles.module.css
@@ -7,7 +7,7 @@
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(2, 1fr);
 	gap: 2px;
-	background-color: red;
+	background-color: transparent !important;
 }
 
 @media (min-width: 1000px) {
